WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
106504
REGRESSION(
r139189
): pixel alignment must be performed in device units.
https://bugs.webkit.org/show_bug.cgi?id=106504
Summary
REGRESSION(r139189): pixel alignment must be performed in device units.
Dongseong Hwang
Reported
2013-01-09 16:53:17 PST
After
r139189
, pixel alignment is performed in UI units. If deviceScaleFactor is fractional number, adjusted scroll position can blur non-composited layer.
Attachments
Patch
(2.29 KB, patch)
2013-01-09 16:59 PST
,
Dongseong Hwang
kenneth
: review+
kenneth
: commit-queue-
Details
Formatted Diff
Diff
Patch
(2.21 KB, patch)
2013-01-10 00:52 PST
,
Dongseong Hwang
no flags
Details
Formatted Diff
Diff
Show Obsolete
(1)
View All
Add attachment
proposed patch, testcase, etc.
Dongseong Hwang
Comment 1
2013-01-09 16:59:19 PST
Created
attachment 182016
[details]
Patch
Kenneth Rohde Christiansen
Comment 2
2013-01-09 19:14:25 PST
Comment on
attachment 182016
[details]
Patch View in context:
https://bugs.webkit.org/attachment.cgi?id=182016&action=review
> Source/WebKit2/UIProcess/PageViewportController.cpp:98 > + float contentsScale = m_pageScaleFactor * deviceScaleFactor();
lets call this effectiveScale
Dongseong Hwang
Comment 3
2013-01-10 00:52:55 PST
Created
attachment 182082
[details]
Patch
WebKit Review Bot
Comment 4
2013-01-10 02:01:09 PST
Comment on
attachment 182082
[details]
Patch Clearing flags on attachment: 182082 Committed
r139300
: <
http://trac.webkit.org/changeset/139300
>
WebKit Review Bot
Comment 5
2013-01-10 02:01:13 PST
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug