REGRESSION(r139189): pixel alignment must be performed in device units. https://bugs.webkit.org/show_bug.cgi?id=106504

Patch by Huang Dongsung <luxtella@company100.net> on 2013-01-10
Reviewed by Kenneth Rohde Christiansen.

After r139189, pixel alignment is performed in UI units. If deviceScaleFactor is
fractional number, adjusted scroll position can blur non-composited layer.

* UIProcess/PageViewportController.cpp:
(WebKit::PageViewportController::pixelAlignedFloatPoint):

Canonical link: https://commits.webkit.org/124748@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@139300 268f45cc-cd09-0410-ab3c-d52691b4dbfc